Adding changes for api logic

--- a/views/data.ejs
+++ b/views/data.ejs
@@ -24,7 +24,7 @@
 				<div>
 			<center>
 				<table class="table table-hover text-center">
-					<tr><td><p><a id="link" href="http://192.168.99.100:8080/chat/"onclick="location.href=this.href+'<%= name %>';return false;">Start a new conversation</a></p></td></tr>
+					<tr><td><p><a id="link" href="http://192.168.99.100:9000/chat/"onclick="location.href=this.href+'<%= name %>';return false;">Start a New Conversation</a></p></td></tr>
 				
 				</table>
 			</center>
@@ -32,7 +32,8 @@
 				<div>
 			<center>
 				<table class="table table-hover text-center">
-					<tr><td>Open chat history</td></tr>
+				<tr><td><p><a id="link" href="http://192.168.99.100:3000/api/chats/"onclick="location.href=this.href+'<%= name %>';return false;">Open Chat History</a></p></td></tr>
+					<!--<tr><td>Open Chat History</td></tr> -->
 				
 				</table>
 			</center>
