--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
       <input id="txt" autocomplete="off" autofocus="on" oninput="isTyping()" placeholder="type your message here..." /><button>Send</button>
     </form>
     <script>
-            var socket = io.connect('http://192.168.99.100:' + '8080');
+            var socket = io.connect('http://192.168.99.100:' + '9000');
 //			var clients = io.sockets.clients();
             // submit text message without reload/refresh the page
             $('form').submit(function(e){
@@ -38,11 +38,32 @@
             // append the chat text message
             socket.on('chat_message', function(msg){
                 $('#messages').append($('<li>').html(msg));
+				var Message = $('#messages');
+				//$.post('http://192.168.99.100:3000/api/chats/', { name: username, message : "Heya"}, 
+				$.post('http://192.168.99.100:3000/api/chats/', { name: username, message : msg}, 
+					function(returnedData){
+						console.log(returnedData);
+				}).fail(function(){
+					console.log("error");
+				});
+				
             });
             // append text if someone is online
             socket.on('is_online', function(username) {
                 $('#messages').append($('<li>').html(username));
             });
+			
+			// Deepak Code Starts
+			//socket.on('disconnect', function(username) {
+			/*	$.post('http://192.168.99.100:3000/api/chats/', { name: username, message : $("#messages").val()}, 
+					function(returnedData){
+						console.log(returnedData);
+				}).fail(function(){
+					console.log("error");
+				}); */
+			//});
+			// Deepak Code Ends
+			
             // ask username
 //           var username = prompt('Please tell me your name');
 			var username = '<%= user1 %>';
@@ -50,5 +71,19 @@
             socket.emit('username', username);
 			
     </script>
+	
+<!--	<form> 
+        <textarea placeholder = "Trigger an  
+         interaction by writing something here"> 
+        </textarea> 
+    </form> 
+      
+    <script type="text/javascript"> 
+        window.addEventListener('beforeunload', function (e) { 
+            e.preventDefault(); 
+            e.returnValue = ''; 
+        }); 
+    </script> 
+-->	
   </body>
 </html>
